.k3d/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: local.navida.dev
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /testnginx(/|$)(.*)
        pathType: Prefix
